Org logo - implemented croppie. Able to upload an image, crop it and save it base64 on the model image attribute. Reloads correctly too.
To do:
- Saved image size seems to vary - figure out why
- Show the image on the organization page
- Maximum file size
- Error handling

--- a/css/tennis-app.css
+++ b/css/tennis-app.css
@@ -443,6 +443,15 @@ body.standalone .contents {
   width: 50%;
 }
 
+.bootbox-form.organization .logo-container {
+  display: table-cell;
+  width: 260px;
+  height: 260px;
+  border: 4px solid #ddd;
+  text-align: center;
+  vertical-align: middle;
+}
+
 
 .popover {
   max-width: 300px;
